--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -3,27 +3,43 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index Category</h1>
+<div class="container p-3">
+    <div class="row pt-4">
+        <div class="text-primary col-6">
+              <h2>Categories</h2>
+        </div>
+        <div class="col-6 text-end">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
 
-<table class="table table-bordered" >
-    <thead>
-        <tr>
-            <th>Category Name</th>
-            <th>Display Order</th>
-        </tr>
-    </thead>
-    <tbody>
-       
-            @foreach(var obj in Model )
+                <i class="bi bi-plus-circle"></i> &nbsp   Create New Category
+            </a>
+           
+        </div>
+    </div>
+    <br />
+    <br />
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Category Name</th>
+                <th>Display Order</th>
+                <th>Edit</th>
+            </tr>
+        </thead>
+        <tbody>
+
+            @foreach (var obj in Model)
             {
                 <tr>
                     <td width="50%">@obj.Name</td>
 
                     <td width="50%">@obj.DisplayOrder</td>
+                    <td width="50%"></td>
                 </tr>
             }
-       
-    </tbody>
 
-</table>
+        </tbody>
 
+    </table>
+
+</div>
